# AsPtrExample

./: .gitignore  LICENSE  README.md  __init__.py
VS17 Project/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  _read_mesh_data.cpp  _read_mesh_elements.cpp  _read_obj_data.cpp  ide setup instruction.txt  main.cpp  readmem.cpp
VS17 Project/x64/Release/: Project1.vcxproj.FileListAbsolute.txt  ReadMemProject.dll.recipe  ReadMemProject.exp  ReadMemProject.iobj  ReadMemProject.ipdb  ReadMemProject.lib
VS17 Project/x64/Release/ReadMemProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ReadMemProject.lastbuildstate  ReadMemProject.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
pydll/: __init__.py  readmem.pyd
pyds/: __init__.py  _readmem.pyd
pyds/source/: CMakeLists.txt  README.md  _read_mesh_data.cpp  _read_mesh_elements.cpp  buildinfo.c  buildinfo.h  main.cpp  read_mesh_data.cpp  read_mesh_data_mirror.cpp  read_mesh_elements_mirror.cpp  read_obj_data.cpp  render_obj.cpp  write_img_data.cpp  write_mesh_data.cpp  write_scene_data.cpp
pyext/: __init__.py  readmem.pyd
src/: _read_mesh_data.cpp  _read_mesh_elements.cpp  _read_obj_data.cpp  main.cpp
